<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="activity_settings">Settings</string>
    <string name="activity_licenses">Licenses</string>
    <string name="activity_help">Help</string>
    
    <string name="flow">Flow</string>
    <string name="app_name">Music Flow</string>
    <string name="lyrics">View song lyrics</string>
    <string name="youtube">Watch on YouTube</string>
    <string name="copy">Copy to clipboard</string>
    <string name="action_settings">Settings</string>
    <string name="action_listen">Id</string>
    <string name="action_clear">Clear Flow</string>
    <string name="action_help">Help</string>
    <string name="action_licenses">Licenses</string>
    <string name="hello_world">Hello world!</string>
    <string name="johns_activity">John\'s Activity</string>
    <string name="artist_not_found">Unfortunately, nothing could be found.</string>
    <string name="steves_activity">Lyrics Flow</string>
    <string name="todo">TODO</string>
    <string name="artist_info">Get Artist Info</string>
    <string name="youtube_name">Select Video...</string>
    <string name="loading_flow">Loading Flow&#8230;</string>
    <string name="artist">Artist</string>
    <string name="identify">Identifying the music around you&#8230;</string>
    <string name="welcome_title">Welcome!</string>
    
    <string name="select_action">Select Action...</string>
    
    <string name="pref_card_click">Action for card click</string>
    <string name="pref_summary_card_click">Select an action to be performed when you tap on a song card in the flow.</string>
    <string name="pref_key_card_click">com.smp.funwithmusic.cardclick</string>
    <string name="pref_default_card_click">LYRICS</string>
    
    <string name="pref_flow_category">Flow</string>
    <string name="pref_artist_category">Artist Info</string>
    
    <string name="pref_log_songs">Automatically log songs</string>
    <string name="pref_key_log_songs">com.smp.funwithmusic.logsongs</string>
    <string name="pref_summary_log_songs">If checked, Music Flow will automatically add songs played through your favorite supported music player.</string>
    
    <string name="pref_artist">Action for artist info click</string>
    <string name="pref_summary_artist">Select an action to be performed when you tap on the ""Get Artist Info" button.</string>
    <string name="pref_key_artist">com.smp.funwithmusic.artist</string>
    <string name="pref_default_artist">BIOGRAPHIES</string>
    
    <string name="welcome_content">To get started, simply listen to music in your normal music player and songs will begin to be added to the flow. You can also add songs to the flow by tapping the microphone icon at the top of screen, which will identify the music being played around you.\n\nSee the help documentation for information regarding configuring certain music players to work with Music Flow, and tips on successfully identifying music through the microphone.</string>
	
    <string name="apache"><a href="http://apache.org/licenses/LICENSE-2.0.html">http://apache.org/licenses/LICENSE-2.0.html</a></string>
    
    <string name="apache_text">The following are distributed under the Apache 2.0 license:\n\nPicasso, OkHttp\nCopyright 2013 Square, Inc.\n\nPhotoView\nCopyright 2011, 2012 Chris Banes\n\nSlidingMenu\nCopyright 2012 Jeremy Feinstein\n\nCards-UI, Silk\nCopyright 2013 Aidan Follestad\n\nVolley,\nYouTube Data API Client Library,\nYouTube Android Player API\nCopyright 2012, 2013 Google, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n</string>
    <string name="apache_text2">\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n</string>
   
    <string name="pref_artist">Action for artist info click</string>
    
    <string name="help_title1">Music Players</string>
    <string name="help_title2">Music Identification</string>
    
    <string name="help_text1">The following music players are known to work with Music Flow:\n\nAndroid Music Player\nCubed - enable scrobbling\ndoubleTwist\nGoogle Play Music\nLast.fm\nMeridian Player\nPlayerPro\nPoweramp\Rdio\nRealPlayer\nSpotify\nWinamp - enable scrobbling\n\nIf your music player isn\'t listed, you can still enjoy Music Flow by turning on last.fm scrobbling in most cases.</string>
    <string name="help_text2">In order to identify music "over the air", the music must be from a commercial source (no live music, singing or humming). The music must be at a reasonable volume and there can not be excessive background noise. While the Gracenote database contains millions of songs, in some cases the song may not able to be identified because the song is not in the database.</string>
    
    <string-array name="pref_array_card_click">
        <item>View song lyrics</item>
        <item>Watch YouTube video</item>
        <item>Copy song to clipboard</item>
    </string-array>
    <string-array name="pref_array_card_click_values">
        <item>LYRICS</item>
        <item>YOUTUBE</item>
        <item>CLIPBOARD</item>
    </string-array>
    
     <string-array name="pref_array_artist">
        <item>View artist events</item>
        <item>View artist news items</item>
        <item>View artist album reviews</item>
        <item>View artist biographies</item>
        <item>View artist images</item>
    </string-array>
    <string-array name="pref_array_artist_values">
        <item>EVENTS</item>
        <item>NEWS</item>
        <item>REVIEWS</item>
        <item>BIOGRAPHIES</item>
        <item>IMAGES</item>
    </string-array>

</resources>