<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/flow"
        android:icon="@drawable/flow_button"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/flow"/>
    <item
        android:id="@+id/listen"
        android:icon="@drawable/microphone"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_listen"/>
    <item
        android:id="@+id/clear"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/help"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/licenses"
        android:showAsAction="never"
        android:title="@string/action_licenses"/>
    

</menu>